[package]
name = "sqlpop"
version = "0.3.0"
authors = ["gwenn"]
description = "SQL parser (as understood by SQLite)"
repository = "https://github.com/gwenn/sqlpop"
documentation = "https://docs.rs/sqlpop"
readme = "README.md"
keywords = ["sql", "parser", "sqlite"]
categories = ["parser-implementations"]
license = "Apache-2.0/MIT"
build = "build.rs" # LALRPOP preprocessing

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[badges]
travis-ci = { repository = "gwenn/sqlpop" }
maintenance = { status = "experimental" }

[dependencies]
lalrpop-util = "0.16"

[build-dependencies]
lalrpop = "0.16"
